# linkedin-claude-code-tips

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PROMPT.md  README.md  SETUP.md  install.sh  pyproject.toml
execution_results/2026-04-01/: execution-data.json  execution-report.md
execution_results/2026-04-02/: execution-data.json  execution-report.md
execution_results/2026-04-04/: execution-data.json  execution-report.md
execution_results/2026-04-07/: execution-data.json  execution-report.md
generated_skills/2026-04-01/: agent-Discord를-멀티-에이전트-협업-채널로-활용하기.md  agent-Figma-JSON-정규화-파이프라인을-Claude-Code-Agent로.md  agent-GitHub-Actions와-Claude-Code를-연동해-이슈-정리코드-22.md  agent-GitHub-Actions와-Claude-Code를-연동해-이슈-정리코드.md  agent-Ralph-Loop-Claude-Code를-무한-루프로-돌려-자율-개발.md  agent-Ralph-Loop-Claude를-while-true-무한-루프로-자율.md  agent-검증구현은-리서치-스킬-에이전트에-위임하고-분리-실행.md  agent-구현-Agent와-테스트-Agent를-분리해-컨텍스트-격리하기.md  agent-멀티-에이전트-브레인스토밍으로-아키텍처-설계하기.md  agent-에이전트는-맥락과-암묵지를-명시적으로-주입해야-제대로-작동한다.md  config-CLAUDEmd-설정으로-AI가-프로젝트-규칙을-기억하게-하기.md  config-CLAUDEmd-설정으로-AI가-프로젝트-규칙을-지속-기억하게-만들기.md  config-CLAUDEmd로-프로젝트-표준-및-제약-조건-정의하기.md  (+14 more)
hooks/: README.md  file_logger.py
mcp_server/: server.py
reports/: 2026-04-01-skill-report.md  2026-04-02-skill-report.md  2026-04-04-skill-report.md  2026-04-05-skill-report.md  2026-04-07-skill-report.md  2026-04-08-skill-report.md  2026-04-09-skill-report.md
scheduler/: daily_job.py  daily_job_once.py
scraper/: analyzer.py  linkedin_scraper.py  publisher.py  reporter.py  skill_executor.py  skill_generator.py
scripts/: register_task.ps1
(+16 files in other folders)
