[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "LinkedIn Claude Code tips scraper with MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "playwright",
    "claude-agent-sdk",
    "python-dotenv",
    "schedule",
    "aiofiles",
]

[project.scripts]
run-scheduler = "scheduler.daily_job:main"
run-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "scheduler", "mcp_server"]
